tests/invalid/init_wrong_return_type/main.py
class Foo:
    x: int

    def __init__(self, x: int) -> int:
        self.x = x
